update file reading for KS