@@ -5,14 +5,14 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 
 public class KSTest {
     @DisplayName("Knapsack")
     @TestFactory
     public Stream<DynamicTest> testKS() {
-        var dataSupplier = new KSTestDataSupplier(Paths.get("src", "test", "resources", "Knapsack").toString());
+        var dataSupplier = new KSTestDataSupplier(Path.of("src", "test", "resources", "Knapsack"));
         var bench = new ProblemTestBench<>(dataSupplier);
         bench.testRelaxation = true;
         bench.testFLB = true;
